--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="logo"><img src="images/Screen Shot 2021-06-08 at 8.58.27 PM.png" alt="" /></a>
+								<a href="#" class="image"><img src="images/Screen Shot 2021-06-08 at 8.58.27 PM.png" alt="" /></a>
 								<header>
 									<h2></h2>
 									<p>Another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
