--- a/index.html
+++ b/index.html
@@ -500,11 +500,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="image"><img src="images/Screen Shot 2021-06-08 at 8.58.27 PM.png" alt="" /></a>
-								<header>
-									<h2></h2>
-									<p>Another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
-								</header>
+								<a href="#" class="image"><img src="images/TAElogo.jpg" alt="" /></a>
+								
 							</section>
 
 						<!-- Mini Posts -->
@@ -623,6 +620,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li>
 									<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
+								<p>Another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
 								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
 							</section>
 
