--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="image"><img src="images/TAElogo.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/TAElogo.jpg" alt="" /></a>
 								
 							</section>
 
