--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 								<li><a href="#">Health</a></li>
 								<li><a href="#">Science Recaps</a></li>
 								<li><a href="#">Athens Energy</a></li>
+								<li><a href="#">About Us</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
@@ -57,6 +58,12 @@
 						<!-- Links -->
 							<section>
 								<ul class="links">
+									<li><a href="#">Home</a></li>
+									<li><a href="#">Science&Sustainability</a></li>
+									<li><a href="#">Research</a></li>
+									<li><a href="#">Health</a></li>
+									<li><a href="#">Science Recaps</a></li>
+									<li><a href="#">Athens Energy</a></li>
 									<li>
 										<a href="#">
 											<h3>Lorem ipsum</h3>
