--- a/single.html
+++ b/single.html
@@ -18,14 +18,15 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Future Imperfect</a></h1>
+						<h1><a href="index.html">The Athens Effect</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Lorem</a></li>
-								<li><a href="#">Ipsum</a></li>
-								<li><a href="#">Feugiat</a></li>
-								<li><a href="#">Tempus</a></li>
-								<li><a href="#">Adipiscing</a></li>
+								<li><a href="#">Science&Sustainability</a></li>
+								<li><a href="#">Research</a></li>
+								<li><a href="#">Health</a></li>
+								<li><a href="#">Science Recaps</a></li>
+								<li><a href="#">Athens Energy</a></li>
+								<li><a href="#">About Us</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
@@ -58,28 +59,15 @@
 								<ul class="links">
 									<li>
 										<a href="#">
-											<h3>Lorem ipsum</h3>
-											<p>Feugiat tempus veroeros dolor</p>
+											<h3>About Us</h3>
+											<p></p>
 										</a>
 									</li>
-									<li>
-										<a href="#">
-											<h3>Dolor sit amet</h3>
-											<p>Sed vitae justo condimentum</p>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3>Feugiat veroeros</h3>
-											<p>Phasellus sed ultricies mi congue</p>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3>Etiam sed consequat</h3>
-											<p>Porta lectus amet ultricies</p>
-										</a>
-									</li>
+									<li><a href="#">Science&Sustainability</a></li>
+									<li><a href="#">Research</a></li>
+									<li><a href="#">Health</a></li>
+									<li><a href="#">Science Recaps</a></li>
+									<li><a href="#">Athens Energy</a></li>
 								</ul>
 							</section>
 
