--- a/single.html
+++ b/single.html
@@ -60,7 +60,7 @@
 									<li>
 										<a href="#">
 											<h3>About Us</h3>
-											<p></p>
+											<p>Hello and welcome! We’re a student publication out of Ohio University in Athens, Ohio, dedicated to writing about science, research and technology. We started in 2019 after our three founders noticed that no other media outlet that was writing about the important (and impressive!) science and research going on at the university, covering everything from psychology to biology to conservation to nanotechnology! Want to get involved? Email athenseffect@gmail.com or pitch a story for us <a href="https://docs.google.com/forms/d/e/1FAIpQLSexN-HgFbBwj8hClUhCwhq4UmECfq6VfP-jrm3J3vu5eQqHgg/viewform">here!</a></p>
 										</a>
 									</li>
 									<li><a href="#">Science&Sustainability</a></li>
