--- a/science.html
+++ b/science.html
@@ -1,1 +1,74 @@
+<!DOCTYPE HTML>
+<!--
+	Future Imperfect by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>The Athens Effect</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<h1><a href="index.html">The Athens Effect</a></h1>
+						<nav class="links">
+							<ul>
+								<li><a href="#">Science&Sustainability</a></li>
+								<li><a href="#">Research</a></li>
+								<li><a href="#">Health</a></li>
+								<li><a href="#">Science Recaps</a></li>
+								<li><a href="#">Athens Energy</a></li>
+								<li><a href="#">About Us</a></li>
+							</ul>
+						</nav>
+						<nav class="main">
+							<ul>
+								<li class="search">
+									<a class="fa-search" href="#search">Search</a>
+									<form id="search" method="get" action="#">
+										<input type="text" name="query" placeholder="Search" />
+									</form>
+								</li>
+								<li class="menu">
+									<a class="fa-bars" href="#menu">Menu</a>
+								</li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Menu -->
+					<section id="menu">
+
+						<!-- Search -->
+							<section>
+								<form class="search" method="get" action="#">
+									<input type="text" name="query" placeholder="Search" />
+								</form>
+							</section>
+
+						<!-- Links -->
+							<section>
+								<ul class="links">
+									<li>
+										<a href="#">
+											<h3>About Us</h3>
+											<p>Hello and welcome! We’re a student publication out of Ohio University in Athens, Ohio, dedicated to writing about science, research and technology. We started in 2019 after our three founders noticed that no other media outlet that was writing about the important (and impressive!) science and research going on at the university, covering everything from psychology to biology to conservation to nanotechnology! Want to get involved? Email athenseffect@gmail.com or pitch a story for us <a href="https://docs.google.com/forms/d/e/1FAIpQLSexN-HgFbBwj8hClUhCwhq4UmECfq6VfP-jrm3J3vu5eQqHgg/viewform">here!</a></p>
+										</a>
+									</li>
+									<li><a href="#">Science&Sustainability</a></li>
+									<li><a href="#">Research</a></li>
+									<li><a href="#">Health</a></li>
+									<li><a href="#">Science Recaps</a></li>
+									<li><a href="#">Athens Energy</a></li>
+									
+								</ul>
+							</section>
 
