--- a/index.html
+++ b/index.html
@@ -610,6 +610,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</ul>
 								<p>Another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
 								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
+								<p>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
 							</section>
 
 					</section>
