--- a/science.html
+++ b/science.html
@@ -71,4 +71,6 @@
 									
 								</ul>
 							</section>
-	<a href = "HappyArcheology.md.html">
+	<body>
+   		<include src="./HappyArcheology.md.html"></include>
+	</body>
