--- a/science.html
+++ b/science.html
@@ -71,6 +71,4 @@
 									
 								</ul>
 							</section>
-	<body>
-   		<include src="./HappyArcheology.md.html"></include>
-	</body>
+	<iframe src="./HappyArcheology.md.html"></iframe>
