--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<nav class="links">
 							<ul>
 								<li><a href="science.html">Science&Sustainability</a></li>
-								<li><a href="#">Research</a></li>
+								<li><a href="HappyArcheology.md.html">Research</a></li>
 								<li><a href="#">Health</a></li>
 								<li><a href="#">Science Recaps</a></li>
 								<li><a href="#">Athens Energy</a></li>
