--- a/HappyArcheology.md.html
+++ b/HappyArcheology.md.html
@@ -1,102 +1,23 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>The Athens Effect</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Header -->
-					<header id="header">
-						<h1><a href="index.html">The Athens Effect</a></h1>
-						<nav class="links">
-							<ul>
-								<li><a href="science.html">Science&Sustainability</a></li>
-								<li><a href="HappyArcheology.md.html">Research</a></li>
-								<li><a href="#">Health</a></li>
-								<li><a href="#">Science Recaps</a></li>
-								<li><a href="#">Athens Energy</a></li>
-								<li><a href="#">About Us</a></li>
-							</ul>
-						</nav>
-						<nav class="main">
-							<ul>
-								<li class="search">
-									<a class="fa-search" href="#search">Search</a>
-									<form id="search" method="get" action="#">
-										<input type="text" name="query" placeholder="Search" />
-									</form>
-								</li>
-								<li class="menu">
-									<a class="fa-bars" href="#menu">Menu</a>
-								</li>
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Menu -->
-					<section id="menu">
-
-						<!-- Search -->
-							<section>
-								<form class="search" method="get" action="#">
-									<input type="text" name="query" placeholder="Search" />
-								</form>
-							</section>
-
-						<!-- Links -->
-							<section>
-								<ul class="links">
-									<li>
-										<a href="#">
-											<h3>About Us</h3>
-											<p>Hello and welcome! We’re a student publication out of Ohio University in Athens, Ohio, dedicated to writing about science, research and technology. We started in 2019 after our three founders noticed that no other media outlet that was writing about the important (and impressive!) science and research going on at the university, covering everything from psychology to biology to conservation to nanotechnology! Want to get involved? Email athenseffect@gmail.com or pitch a story for us <a href="https://docs.google.com/forms/d/e/1FAIpQLSexN-HgFbBwj8hClUhCwhq4UmECfq6VfP-jrm3J3vu5eQqHgg/viewform">here!</a></p>
-										</a>
-									</li>
-									<li><a href="science.html">Science&Sustainability</a></li>
-									<li><a href="#">Research</a></li>
-									<li><a href="#">Health</a></li>
-									<li><a href="#">Science Recaps</a></li>
-									<li><a href="#">Athens Energy</a></li>
-									
-								</ul>
-							</section>
-
-						<!-- Actions -->
-							<section>
-								<ul class="actions stacked">
-									<li><a href="#" class="button large fit">Log In</a></li>
-								</ul>
-							</section>
-
-					</section>
-
-				<!-- Main -->
-					<div id="main"><head><meta charset="utf-8"><title>HappyArcheology.md</title><style></style></head><body id="preview">
-            <h1 class="code-line" data-line-start=0 data-line-end=1><a id="Happy_Ohio_Archeology_Month_0"></a>Happy Ohio Archeology Month!</h1>
-            <p class="has-line-data" data-line-start="1" data-line-end="2"><em>Dr. Andrew Tremayne and Dr. Joseph Gingerich discuss the Ohio University Field School’s “old news” and dispel some misconceptions about what archeology is.</em></p>
-            <p class="has-line-data" data-line-start="3" data-line-end="4">October is a month of gorgeous fall weather, costumes, pumpkins and a burst of vibrant color as nature sunsets into winter. While candy corn and haunted houses may come to mind, most people don’t realize that October is also Ohio Archeology month.</p>
-            <p class="has-line-data" data-line-start="5" data-line-end="6">Movie blockbusters have helped perpetuate the stereotype that archeology is simply about digging stuff up or hunting for treasure. The Indiana Jones movies, although they are entertaining, shift viewers’ focus to glittery artifacts in momentous temples rather than the organic and inorganic clues real archeologists often excavate from the ground. Other films like Jurassic Park use the terms archeology and paleontology interchangeably, furthering this confusion as to what the subject actually encompasses.</p>
-            <p class="has-line-data" data-line-start="7" data-line-end="8">Dr. Joseph Gingerich, Director of the Field School and Assistant Professor of Anthropology at Ohio University, is able to clear up the confusion about archeology.</p>
-            <p class="has-line-data" data-line-start="9" data-line-end="10">“Archeology has nothing to do with dinosaurs,” he clarifies.</p>
-            <p class="has-line-data" data-line-start="11" data-line-end="12">According to him, archeologists like himself focus on, “Studying humans through their material remains…we try to understand past behaviors by analyzing those artifacts.”</p>
-            <p class="has-line-data" data-line-start="14" data-line-end="15">Archeologists study humankind specifically and look for clues to investigate past cultures, migrations, populations, human evolution and lifestyles. The field requires both delicate work in excavation as well as the knowhow to interpret scientific findings. Due to this complexity, a lot of training is required. This is where Ohio University’s Field School comes in.</p>
-            <p class="has-line-data" data-line-start="16" data-line-end="17">“The Field School is an opportunity that we offer to students… typically it’s something that is taken by majors with a focus in archeology,” Gingerich explained. “It’s one of our key courses for job training. We teach methods on how to discover sites, to excavate sites and the general approaches archeologists use to uncover the past.”</p>
-            <p class="has-line-data" data-line-start="18" data-line-end="19">During the summer, these students have the opportunity to get real experience through a partnership Ohio University has with Wayne National Forest. To an outside observer, it may seem that the program has a lot to do with digging holes.</p>
-            <p class="has-line-data" data-line-start="20" data-line-end="22">Dr. Andrew Tremayne, the Heritage Program Manager for the Wayne National Forest, describes “shovel-testing,” which is the initial grunt-work students are taught in order to conduct basic surveys. He characterizes these surveys as, “The bread and butter of a lot of archeology jobs.”<br>
-            “The goal of shovel testing is to determine if there are any cultural materials that are buried on a site,” he explained. “In Ohio we don’t have a lot of very good surface visibility. Here you have to dig beneath the vegetation to actually find the artifacts.”</p>
-            <p class="has-line-data" data-line-start="23" data-line-end="24">If one of these tests turn up positive, then more tests are done in the surrounding area to determine whether an excavation would be beneficial to learn more. Sometimes the sites are revisited for a number of field schools. According to Tremayne, “You have to adapt your strategy to learn about the site as you go because you are revealing it as you go.”</p>
-            <p class="has-line-data" data-line-start="25" data-line-end="26">As for the future of the Ohio Field School’s current site, Tremayne is excited.</p>
-            <p class="has-line-data" data-line-start="28" data-line-end="29">“There’s a lot more to learn about it,” he said. “Field schools next year and in future years will reveal much more about who was there and what the draw of that place was for them.”</p>
-            <p class="has-line-data" data-line-start="30" data-line-end="31">With the Field School, students learn not only how to identify sites, but also how to record, excavate and research the sites they work on. This comprehensive approach is part of what sets Ohio’s Field School apart.</p>
-            <p class="has-line-data" data-line-start="32" data-line-end="33">“Lots of field schools only do excavation,“ Gingerich explained. “There’s just a large portion of field schools that you go to a large, known site and do full-scale excavation… [the Ohio school is] unique because we try to teach all components of archeology.”</p>
-            <p class="has-line-data" data-line-start="34" data-line-end="35">The work that students complete through the Field School at the Wayne National Forest is valuable not only to their own careers, but also to Ohio University’s Anthropology research, Wayne National Forest and the surrounding public.</p>
-            <p class="has-line-data" data-line-start="36" data-line-end="37">Tremayne expressed, “We, The Wayne National Forest, need assistance and to be able to partner and collaborate with Ohio University. It’s been really huge. It’s beneficial to the Wayne because this collaboration provides us volunteers we need to complete the archaeological investigations. It takes a lot of time and people to investigate archaeology sites. This then allows the Forest Service to share the findings with the public, which is ultimately who we serve.”</p>
-            <p class="has-line-data" data-line-start="38" data-line-end="39">According to Gingerich, it is most important that Ohio University is able to keep a local presence in archeology.</p>
-            <p class="has-line-data" data-line-start="40" data-line-end="41">“I think it’s important to know what’s in your own backyard and to provide research experiences nearby so more people can participate,” he said. “Lots of times people think of archeology and they think of Egypt, but… people were running around Ohio hunting mastodons 7,000 years before the pyramids were even built.”</p>
-            </body></html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>HappyArcheology.md</title><style></style></head><body id="preview">
+<h1 class="code-line" data-line-start=0 data-line-end=1><a id="Happy_Ohio_Archeology_Month_0"></a>Happy Ohio Archeology Month!</h1>
+<p class="has-line-data" data-line-start="1" data-line-end="2"><em>Dr. Andrew Tremayne and Dr. Joseph Gingerich discuss the Ohio University Field School’s “old news” and dispel some misconceptions about what archeology is.</em></p>
+<p class="has-line-data" data-line-start="3" data-line-end="4">October is a month of gorgeous fall weather, costumes, pumpkins and a burst of vibrant color as nature sunsets into winter. While candy corn and haunted houses may come to mind, most people don’t realize that October is also Ohio Archeology month.</p>
+<p class="has-line-data" data-line-start="5" data-line-end="6">Movie blockbusters have helped perpetuate the stereotype that archeology is simply about digging stuff up or hunting for treasure. The Indiana Jones movies, although they are entertaining, shift viewers’ focus to glittery artifacts in momentous temples rather than the organic and inorganic clues real archeologists often excavate from the ground. Other films like Jurassic Park use the terms archeology and paleontology interchangeably, furthering this confusion as to what the subject actually encompasses.</p>
+<p class="has-line-data" data-line-start="7" data-line-end="8">Dr. Joseph Gingerich, Director of the Field School and Assistant Professor of Anthropology at Ohio University, is able to clear up the confusion about archeology.</p>
+<p class="has-line-data" data-line-start="9" data-line-end="10">“Archeology has nothing to do with dinosaurs,” he clarifies.</p>
+<p class="has-line-data" data-line-start="11" data-line-end="12">According to him, archeologists like himself focus on, “Studying humans through their material remains…we try to understand past behaviors by analyzing those artifacts.”</p>
+<p class="has-line-data" data-line-start="14" data-line-end="15">Archeologists study humankind specifically and look for clues to investigate past cultures, migrations, populations, human evolution and lifestyles. The field requires both delicate work in excavation as well as the knowhow to interpret scientific findings. Due to this complexity, a lot of training is required. This is where Ohio University’s Field School comes in.</p>
+<p class="has-line-data" data-line-start="16" data-line-end="17">“The Field School is an opportunity that we offer to students… typically it’s something that is taken by majors with a focus in archeology,” Gingerich explained. “It’s one of our key courses for job training. We teach methods on how to discover sites, to excavate sites and the general approaches archeologists use to uncover the past.”</p>
+<p class="has-line-data" data-line-start="18" data-line-end="19">During the summer, these students have the opportunity to get real experience through a partnership Ohio University has with Wayne National Forest. To an outside observer, it may seem that the program has a lot to do with digging holes.</p>
+<p class="has-line-data" data-line-start="20" data-line-end="22">Dr. Andrew Tremayne, the Heritage Program Manager for the Wayne National Forest, describes “shovel-testing,” which is the initial grunt-work students are taught in order to conduct basic surveys. He characterizes these surveys as, “The bread and butter of a lot of archeology jobs.”<br>
+“The goal of shovel testing is to determine if there are any cultural materials that are buried on a site,” he explained. “In Ohio we don’t have a lot of very good surface visibility. Here you have to dig beneath the vegetation to actually find the artifacts.”</p>
+<p class="has-line-data" data-line-start="23" data-line-end="24">If one of these tests turn up positive, then more tests are done in the surrounding area to determine whether an excavation would be beneficial to learn more. Sometimes the sites are revisited for a number of field schools. According to Tremayne, “You have to adapt your strategy to learn about the site as you go because you are revealing it as you go.”</p>
+<p class="has-line-data" data-line-start="25" data-line-end="26">As for the future of the Ohio Field School’s current site, Tremayne is excited.</p>
+<p class="has-line-data" data-line-start="28" data-line-end="29">“There’s a lot more to learn about it,” he said. “Field schools next year and in future years will reveal much more about who was there and what the draw of that place was for them.”</p>
+<p class="has-line-data" data-line-start="30" data-line-end="31">With the Field School, students learn not only how to identify sites, but also how to record, excavate and research the sites they work on. This comprehensive approach is part of what sets Ohio’s Field School apart.</p>
+<p class="has-line-data" data-line-start="32" data-line-end="33">“Lots of field schools only do excavation,“ Gingerich explained. “There’s just a large portion of field schools that you go to a large, known site and do full-scale excavation… [the Ohio school is] unique because we try to teach all components of archeology.”</p>
+<p class="has-line-data" data-line-start="34" data-line-end="35">The work that students complete through the Field School at the Wayne National Forest is valuable not only to their own careers, but also to Ohio University’s Anthropology research, Wayne National Forest and the surrounding public.</p>
+<p class="has-line-data" data-line-start="36" data-line-end="37">Tremayne expressed, “We, The Wayne National Forest, need assistance and to be able to partner and collaborate with Ohio University. It’s been really huge. It’s beneficial to the Wayne because this collaboration provides us volunteers we need to complete the archaeological investigations. It takes a lot of time and people to investigate archaeology sites. This then allows the Forest Service to share the findings with the public, which is ultimately who we serve.”</p>
+<p class="has-line-data" data-line-start="38" data-line-end="39">According to Gingerich, it is most important that Ohio University is able to keep a local presence in archeology.</p>
+<p class="has-line-data" data-line-start="40" data-line-end="41">“I think it’s important to know what’s in your own backyard and to provide research experiences nearby so more people can participate,” he said. “Lots of times people think of archeology and they think of Egypt, but… people were running around Ohio hunting mastodons 7,000 years before the pyramids were even built.”</p>
+</body></html>
