--- a/science.html
+++ b/science.html
@@ -22,7 +22,7 @@
 						<nav class="links">
 							<ul>
 								<li><a href="science.html">Science&Sustainability</a></li>
-								<li><a href="#">Research</a></li>
+								<li><a href="HappyArcheology.md.html">Research</a></li>
 								<li><a href="#">Health</a></li>
 								<li><a href="#">Science Recaps</a></li>
 								<li><a href="#">Athens Energy</a></li>
@@ -71,6 +71,15 @@
 									
 								</ul>
 							</section>
+
+						<!-- Actions -->
+							<section>
+								<ul class="actions stacked">
+									<li><a href="#" class="button large fit">Log In</a></li>
+								</ul>
+							</section>
+
+					</section>
 	<head><meta charset="utf-8"><title>HappyArcheology.md</title><style></style></head><body id="preview">
 <h1 class="code-line" data-line-start=0 data-line-end=1><a id="Happy_Ohio_Archeology_Month_0"></a>Happy Ohio Archeology Month!</h1>
 <p class="has-line-data" data-line-start="1" data-line-end="2"><em>Dr. Andrew Tremayne and Dr. Joseph Gingerich discuss the Ohio University Field School’s “old news” and dispel some misconceptions about what archeology is.</em></p>
