--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 										<a href="#" class="author"><span class="name">Katelyn Rousch</span><img src="images/fox.png" alt="" /></a>
 									</div>
 								</header>
-								<span class="image featured"><img src="images/Pots.jpeg" alt="" /></span>
+								<span class="image featured"><img src="images/Pots.jpeg.png" alt="" /></span>
 								<footer>
 									<ul class="actions">
 										<li><a href="single.html" class="button large">Continue Reading</a></li>
