--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 						<h1><a href="index.html">The Athens Effect</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="science.html">Science&Sustainability</a></li>
-								<li><a href="HappyArcheology.md.html">Research</a></li>
+								<li><a href="#">Science</a></li>
+								<li><a href="#">Research</a></li>
 								<li><a href="#">Health</a></li>
-								<li><a href="#">Science Recaps</a></li>
 								<li><a href="#">Athens Energy</a></li>
 								<li><a href="#">About Us</a></li>
 							</ul>
