--- a/science.html
+++ b/science.html
@@ -56,7 +56,7 @@
 						<!-- Links -->
 							<section>
 								<ul class="links">
-									<li><a href="science.html">Science&Sustainability</a></li>
+									<li><a href="science.html">Science</a></li>
 									<li><a href="research.html">Research</a></li>
 									<li><a href="health.html">Health</a></li>
 									<li><a href="athensenergy.html">Athens Energy</a></li>
