--- a/index.html
+++ b/index.html
@@ -56,16 +56,11 @@
 						<!-- Links -->
 							<section>
 								<ul class="links">
-									<li>
-										<a href="aboutus.html">
-											<h3>About Us</h3>
-											<p>Hello and welcome! We’re a student publication out of Ohio University in Athens, Ohio, dedicated to writing about science, research and technology. We started in 2019 after our three founders noticed that no other media outlet that was writing about the important (and impressive!) science and research going on at the university, covering everything from psychology to biology to conservation to nanotechnology! Want to get involved? Email athenseffect@gmail.com or pitch a story for us <a href="https://docs.google.com/forms/d/e/1FAIpQLSexN-HgFbBwj8hClUhCwhq4UmECfq6VfP-jrm3J3vu5eQqHgg/viewform">here!</a></p>
-										</a>
-									</li>
-									<li><a href="science.html">Science&Sustainability</a></li>
+									<li><a href="science.html">Science</a></li>
 									<li><a href="research.html">Research</a></li>
 									<li><a href="health.html">Health</a></li>
 									<li><a href="athensenergy.html">Athens Energy</a></li>
+									<li><a href="aboutus.html">About Us</a></li>
 									
 								</ul>
 							</section>
@@ -593,10 +588,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 						<!-- About -->
 							<section class="blurb">
-								<h2>About</h2>
-								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod amet placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at phasellus sed ultricies.</p>
+								<h2>About Us</h2>
+								<p>Hello and welcome! We’re a student publication out of Ohio University in Athens, Ohio, dedicated to writing about science, research and technology. We started in 2019 after our three founders noticed that no other media outlet that was writing about the important (and impressive!) science and research going on at the university, covering everything from psychology to biology to conservation to nanotechnology! Want to get involved? Email athenseffect@gmail.com or pitch a story for us <a href="https://docs.google.com/forms/d/e/1FAIpQLSexN-HgFbBwj8hClUhCwhq4UmECfq6VfP-jrm3J3vu5eQqHgg/viewform">here!</a></p>
 								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
+									<li><a href="aboutus.html" class="button">Learn More</a></li>
 								</ul>
 							</section>
 
