--- a/22.10.19.HappyRousch.html
+++ b/22.10.19.HappyRousch.html
@@ -9,7 +9,7 @@
 		<title>Single - Future Imperfect by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="TheAthensEffect.github.io/assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="single is-preload">
 
@@ -136,11 +136,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="TheAthensEffect.github.io/assets/js/jquery.min.js"></script>
-			<script src="TheAthensEffect.github.io/assets/js/browser.min.js"></script>
-			<script src="TheAthensEffect.github.io/assets/js/breakpoints.min.js"></script>
-			<script src="TheAthensEffect.github.io/assets/js/util.js"></script>
-			<script src="TheAthensEffect.github.io/assets/js/main.js"></script>
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
