--- a/index.html
+++ b/index.html
@@ -163,13 +163,7 @@
 									<h4>Preformatted</h4>
 									<pre><code>i = 0; -->
 
-<--while (!deck.isInOrder()) {
-  print 'Iteration ' + i;
-  deck.shuffle();
-  i++;
-}
 
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</section> -->
 
 								<!--<section>
@@ -446,10 +440,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						-->
 
 						<!-- Pagination -->
-							<ul class="actions pagination">
+							<!--<ul class="actions pagination">
 								<li><a href="" class="disabled button large previous">Previous Page</a></li>
 								<li><a href="#" class="button large next">Next Page</a></li>
-							</ul>
+							</ul> -->
 
 					</div>
 
